Edits benchmark